--- a/css/screen-layout-medium.css
+++ b/css/screen-layout-medium.css
@@ -84,9 +84,10 @@ nav ul{
 		"skills"
 		"about-arrow"
 	;
-	margin-bottom: 50px;
+	margin-bottom: 300px;
 	min-height: 100vh;
 	max-height: 200vh;
+	/* height: auto; */
 }
 
 .profile-pic{
@@ -100,7 +101,18 @@ nav ul{
 .profile-pic img:hover{
 	position: static;
 	width: 250px;
-	
+}
+
+article{
+	width: 90%;
+}
+
+.skills{
+	width: 80%;
+}
+
+.about-arrow{
+	padding-top: 50px;
 }
 
 
