--- a/css/screen-layout-large.css
+++ b/css/screen-layout-large.css
@@ -190,17 +190,21 @@ span.web-developer{
 	align-self: center;
 }
 
-.profile-pic img{
+.profile-pic a img{
 	width: 200px;
+	transition: all 0.2s ease-in;
+	-webkit-transition: all 0.2s ease-in;
+	-moz-transition: all 0.2s ease-in;
+	-o-transition: all 0.2s ease-in;
 }
 
-.profile-pic img:hover{
-	position: absolute;
-	top: 105vh;
-	left: 220px;
-	width: 500px;
-	z-index: 3;
+.profile-pic a img:hover{
+	transform: scale(1.1);
+	cursor: pointer;
 }
+
+
+
 
 
 
