--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,21 @@ a:hover{
 	color: #b8b8b8;
 }
 
+.view-more{
+	display: none;
+}
+
+.about-arrow{
+	display: none;
+}
+
+h4 span{
+	font-weight: normal;
+	font-size: 12px;
+	font-style: italic;
+	color: #acabab;
+}
+
 
 
 
