--- a/css/screen-layout-medium.css
+++ b/css/screen-layout-medium.css
@@ -1,171 +1,183 @@
-body{
-	max-width: 900px;
-}
+/** @format */
 
+body {
+  max-width: 900px;
+}
 
 /*HOME SECTION*******************************************************************************************************************************************************/
-#home{
-	grid-template-columns: 1fr;
-	grid-template-rows: 60px auto 3fr 1fr 1fr;
-	grid-template-areas: 
-		"nav"
-		"blog"
-		"intro"
-		"socials"
-		"more"
-	;
+#home {
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px auto 3fr 1fr 1fr;
+  grid-template-areas:
+    "nav"
+    "blog"
+    "intro"
+    "socials"
+    "more";
+}
+
+nav {
+  grid-area: nav;
+  width: 100%;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px 100px;
+  align-items: center;
+  z-index: 10;
+  height: 60px;
 }
 
 
-
-nav{
-	grid-area: nav;
-	width: 100%;
-	grid-template-columns: 1fr;
-	grid-template-rows: 60px 100px;
-	align-items: center;
-	z-index: 10;
-	height: 60px;
-	overflow: hidden;
+.nav-links {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  align-self: center;
+  height: 300px;
+  justify-self: center;
+  width: 100%;
+  background-color: #206268;
+  transform: translateX(100%);
+  display: block;
+  transition: transform 0.5s ease-in;
 }
 
-nav .hamburger{
-	display: block;
-	align-self: center;
-	width: 30px;
-	padding: 20px;
+.burger {
+  display: block;
+  cursor: pointer;
 }
 
-nav ul{
-	align-self: center;
-	height: 300px;
-	justify-self: center;
-	width: 100%;
-	background-color: #206268;
-	margin-top: 200px;
-	
+.nav-active {
+  transform: translateX(0%);
 }
 
-
-.intro{
-	padding-left: 40px;
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
 
-.socials{
-	justify-self: center;
-	padding-left: 25px;
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-3px, 6px);
 }
 
+.toggle .line2 {
+  opacity: 0;
+}
 
+.toggle .line3 {
+  transform: rotate(45deg) translate(-3px, -6px);
+}
 
+.intro {
+  padding-left: 40px;
+}
 
-
+.socials {
+  justify-self: center;
+  padding-left: 25px;
+}
 
 /*About Section**************************************************************************************************************************************************************/
-#about{
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr 3fr 3fr 1fr 300px 1fr;
-	grid-template-areas:
-		"about-head"
-		"profile-pic"
-		"article"
-		"skills-head"
-		"skills"
-		"about-arrow"
-	;
-	/* margin-bottom: 50px; */
-	min-height: 100vh;
-	max-height: 200vh;
+#about {
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 3fr 3fr 1fr 300px 1fr;
+  grid-template-areas:
+    "about-head"
+    "profile-pic"
+    "article"
+    "skills-head"
+    "skills"
+    "about-arrow";
+  min-height: 100vh;
+  max-height: 200vh;
+  margin: 0;
+  padding-top: 70px;
 }
 
-.profile-pic{
-	justify-self: center;
+.profile-pic {
+  justify-self: center;
 }
 
-.profile-pic img{
-	width: 250px;
+.profile-pic img {
+  width: 250px;
 }
 
-.profile-pic img:hover{
-	position: static;
-	width: 250px;
-	
+.profile-pic img:hover {
+  position: static;
+  width: 250px;
 }
 
-.skills{
-	padding: 40px 0;
+.skills {
+  padding: 40px 0;
 }
-
-
-
-
 
 /*Contact Section****************************************************************************************************************************************************/
-#contact{
-	height: 100vh;
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: 1fr 1fr 5fr 3fr;
-	grid-template-areas:
-		"contact-head"
-		"contact-sub-head"
-		"form"
-		"footer"
-	;
+#contact {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr 5fr 3fr;
+  grid-template-areas:
+    "contact-head"
+    "contact-sub-head"
+    "form"
+    "footer";
+  margin: 0;
+  padding-top: 70px;
+
 }
 
-
-form{
-	grid-template-columns: 1fr 4fr;
-	width: 80%;
-	height: 300px;
-	padding-right: 60px;
-	margin-top: 50px;
+form {
+  grid-template-columns: 1fr 4fr;
+  width: 80%;
+  height: 300px;
+  margin-top: 50px;
 }
 
-input.button{
-	width: 150px;
-	justify-self: right;
-	margin-right: 20px;
+input.button {
+  width: 150px;
+  justify-self: right;
+  margin-right: 20px;
 }
 
-
-footer{
-	align-items: center;
+footer {
+  align-items: center;
 }
-
-
-
-
-
-
-
 
 /*Projects***********************************************************************************************************************/
 
-
-#projects-list{
-	grid-area: project-list;
-	margin-left: 0;
+#projects-list {
+  grid-area: project-list;
+  margin: 0;
+  padding-top: 70px;
 }
 
-.project{
-	grid-template-rows: 200px 50px;
-	width: 95%;
-	height: 250px;
+.project {
+  grid-template-columns: 270px 1fr;
+  grid-template-rows: 200px 50px;
+  width: 95%;
+  height: 250px;
 }
 
-.projuct-image{
-	grid-area: project-image;
+.projuct-image {
+  grid-area: project-image;
+  justify-self: start;
 }
 
-.project-info{
-	grid-area: project-info;
-	width: 90%;
-	margin: 0 auto;
-	height: 200px;
+.project-info {
+  grid-area: project-info;
+  width: 90%;
+  margin: 0 auto;
+  height: 200px;
+  padding: 25px 0 0 0;
+  margin: 0;
 }
 
-.tools{
-	display: none;
+.tools {
+  display: none;
 }
